--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://resume_reader:Vicky2004@cluster0.tlkohzk.mongodb.net/mini_ats?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://resume_reader:@cluster0.tlkohzk.mongodb.net/mini_ats?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+
